syntax = "proto3";

package com.ea7jmf.dmr.srv.audiocodecsink;

service AudioCodecSink {
  rpc Decode(DecodeRequest) returns (DecodeResponse) {}
  rpc SetVolume(SetVolumeRequest) returns (VolumeResponse) {}
  rpc GetVolume(GetVolumeRequest) returns (VolumeResponse) {}
}

message DecodeRequest {
  enum Codec {
    CODEC2MODE3200 = 0;
    CODEC2MODE2400 = 1;
    CODEC2MODE1600 = 2;
    CODEC2MODE1400 = 3;
    CODEC2MODE1300 = 4;
    CODEC2MODE1200 = 5;
    CODEC2MODE700  = 6;
    CODEC2MODE700B = 7;
    AMBE3600X2400  = 8;
    AMBE3600X2450  = 9;
    IMBE7200X4400  = 10;
  }
  Codec codec = 1;
  bytes voiceBits = 2;
  uint32 clientId = 3;
  uint64 sequenceNo = 4;
}

message DecodeResponse {
  uint32 decodedBits = 1;
  string error = 2;
}

message GetVolumeRequest {}

message SetVolumeRequest {
  float volume = 1;
}

message VolumeResponse {
  float volume = 1;
}
